Adjust date column width to avoid wrapping

--- a/client/transactions/style.scss
+++ b/client/transactions/style.scss
@@ -1,6 +1,6 @@
 .transactions-list {
 	.date-time {
-		min-width: 190px;
+		min-width: 195px;
 	}
 
 	.payment-method__brand {
